Forum post collapse/expand: 1) Is now full width to balance visibility and mobile accessibility. 2) Use arrows (instead of words) to convey intent. 3) When collapsing, scroll the collapser widget to the top of the viewport so that the next post is in view (avoids manual scrolling back up). 4) double-click on a large post toggles expand/collapse (avoids scrolling when expanded).
FossilOrigin-Name: a30a6db480ece85773abf8923db91a5b48e3c5fefe7b479b8ddb7d523c73d4d3

--- a/src/default.css
+++ b/src/default.css
@@ -775,9 +775,33 @@ div.forumTime > div > form,
 div.forumHierRoot > div > form {
   margin: 0.5em 0;
 }
-button.forum-post-collapser {
-  align-self: flex-start;
-  margin-top: 0.1em;
+.forum-post-collapser {
+  font-size: 0.8em;
+  margin-top: 0.2em;
+  padding: 0;
+  height: 1.75em;
+  line-height: 1.75em;
+  /* ^^^ Those sizes are finely tuned for the current selection of
+     arrow characters. If those change, these should, too. Remember that
+     FF/Chrome simply do not agree on alignment with most values :/.  */
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 0.25em;
+  opacity: 0.8;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.forum-post-collapser > span {
+  margin: 0 1em 0 1em;
+  vertical-align: middle;
+}
+.forum-post-collapser.expanded > span::before {
+  content: "⇡⇡⇡" /*reminder: FF/Chrome cannot agree on alignment of ⮝*/;
+}
+.forum-post-collapser:not(.expanded) > span::before {
+  content: "⇣⇣⇣";
 }
 div.forumPostBody{
   max-height: 50em;
